[package]
name = "printer-share-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bore-cli = "0.4.1"
tokio = { version = "1.22.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
